--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.1",
-    "@angular/cdk": "^8.0.1",
+    "@angular/animations": "^8.2.2",
+    "@angular/cdk": "^8.1.3",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
-    "@angular/material": "^8.0.1",
+    "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "angular-notifier": "^4.1.1",
+    "bootstrap": "^4.3.1",
+    "brace": "^0.11.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng2-cookies": "^1.0.12",
+    "ngx-markdown": "^8.1.0",
+    "ngx-markdown-editor": "^2.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
